Add extention install path

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cadet",
   "displayName": "Cadet",
-  "description": "Dark and minimalistic theme with Tailwind color palette",
-  "publisher": "Seth Cox",
+  "description": "Dark and minimalistic theme with Tailwind color palette and One Dark syntax highlighting",
+  "publisher": "SethCox",
+  "repository": "https://github.com/sethaddison/Cadet-Vscode-Theme",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.57.0"
