--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publisher": "SethCox",
   "icon": "images/cadet.png",
   "repository": "https://github.com/sethaddison/Cadet-Vscode-Theme",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.57.0"
   },
@@ -23,6 +23,11 @@
         "label": "Cadet Medium",
         "uiTheme": "vs-dark",
         "path": "./themes/cadet-medium-gray.json"
+      },
+      {
+        "label": "Cadet Medium Flat",
+        "uiTheme": "vs-dark",
+        "path": "./themes/cadet-medium-gray-flat.json"
       }
     ]
   }
